# matrix-it

./: .editorconfig  .gitignore  CHANGELOG.md  JCR数据库打包说明.md  PRD.md  README.md  UI_DESIGN_SYSTEM.md  UI优化1.md  UI问题.md  Windows安装程序打包指南.md  pdf2md-test.md  下一步开发计划.md  元数据提取说明.md  后端 Sidecar API 文档.md  字段表.md  安装程序中文和图标配置说明.md  安装程序图标修复说明.md  对话记录.md  打包成功总结.md  配置文件打包说明.md
.agent/rules/: frontend-rule.md  project-rule.md
.trae/documents/: MatrixIt 开发计划（基于 PRD v1.0）.md  PDF 解析并行化与多模态并行分析（最佳实践）.md  Refactor App.tsx 解耦与去重.md  sidecar.py 解耦与组件抽离评估与小步重构计划.md  优化文献分析并行链路（llm_async + sidecar）.md  优化矩阵视图信息抽屉排版与编辑交互.md  优化表格列宽拖拽性能.md  修复 Finished 后矩阵字段仍为空（改为 Rust 侧回填 DB 条目）.md  修复 reconcile_feishu unknown command 与无限重试.md  修复Zotero标签与PDF附件同步到飞书（最佳实践）.md  修复分析状态不刷新与并行耗时诊断.md  (+36 more)
backend/: requirements.txt
config/: config.json  config.local.example.json
data/: README.md  matrixit-open-pdf.html
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json
scripts/: build_sidecar.ps1  check_db.py  clean_failed.py  inspect_jcr_db.py  verify_feishu_payload.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/pyi-spec/: matrixit-sidecar-x86_64-pc-windows-msvc.spec
src-tauri/capabilities/: default.json
src-tauri/resources/: config.default.json
src-tauri/src/: db.rs  error.rs  main.rs  utils.rs
src-tauri/src/commands/: analysis.rs  common.rs  config.rs  export.rs  feishu.rs  library.rs  mod.rs  zotero.rs
src-tauri/wix/fragments/: ui-custom.wxs
src-tauri/wix/locales/: zh-CN.wxl
参考/: summaryApi.ts
(+67 files in other folders)
