[package]
name = "matrixit"
version = "1.0.1"
description = "MatrixIt Tauri App"
authors = ["MatrixIt"]
edition = "2021"
rust-version = "1.74"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-shell = "2.3.4"
notify = "6.1.1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2.0.0-beta.0"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
